[package]
name = "okta-authn-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "3.0.0-beta.5"
ctap-hid-fido2 = "=2.1.0"
dirs = "1.0"
keyring = "0.10.1"
reqwest = "0.11.6"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3.1"
uuid = { version = "0.8", features = [ "v4" ] }
